# jobsFinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flaskApp.py  htmlParser.py  scrape_jobs.py
src/: sqlManager.cpp
